--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Best Nursery and primary school in portharcourt."
+      content="Best Nursery and Primary school in portharcourt."
     />
     <meta
       name="keywords"
